--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,4 +1,9 @@
-/* Reset styles */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 h1,
 h2,
 h3,
@@ -32,4 +37,25 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+
+button:hover,
+button:focus,
+button:active {
+  outline: none;
+  background-color: transparent;
+  border-color:inherit ;
+  color: inherit;
+  text-decoration: none;
+}
+
+input:hover,
+input:focus,
+input:active {
+  outline: none;
+  background-color: transparent;
+  /* border: none; */
+  color: inherit;
+  text-decoration: none;
 }
