--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -39,13 +39,16 @@ img {
   height: auto;
 }
 
+input {
+  background-color: #fff;
+}
 
 button:hover,
 button:focus,
 button:active {
   outline: none;
   background-color: transparent;
-  border-color:inherit ;
+  border-color: inherit;
   color: inherit;
   text-decoration: none;
 }
@@ -54,7 +57,7 @@ input:hover,
 input:focus,
 input:active {
   outline: none;
-  background-color: transparent;
+  background-color: #fff;
   /* border: none; */
   color: inherit;
   text-decoration: none;
